--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,8 @@ span:hover {
 }
 
 .nav-link:link,
-footer a:link {
+footer a:link,
+.contacts a:link {
   text-decoration: none;
   color: teal;
   font-size: medium;
@@ -28,13 +29,17 @@ footer a:link {
 }
 
 .nav-link:visited,
-footer a:visited {
+footer a:visited,
+.contacts a:visited {
   color: grey;
 }
 
 .nav-link:hover,
-footer a:hover {
+footer a:hover,
+.contacts a:hover {
   color: goldenrod;
+  transform: scale(1.05);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
 }
 
 .navbar-logo {
@@ -55,8 +60,8 @@ footer a:hover {
 .skills,
 .contacts {
   padding-bottom: 25px;
-  padding-left: 50px;
-  padding-right: 50px;
+  padding-left: 150px;
+  padding-right: 150px;
 }
 
 .section-title,
@@ -79,6 +84,19 @@ footer a:hover {
   text-align: center;
 }
 
+.card {
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.08), 0 0 6px rgba(0, 0, 0, 0.05);
+  transition: 0.3s transform cubic-bezier(0.155, 1.105, 0.295, 1.12),
+    0.3s box-shadow,
+    0.3s -webkit-transform cubic-bezier(0.155, 1.105, 0.295, 1.12);
+  cursor: pointer;
+}
+
+.card:hover {
+  transform: scale(1.05);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
+}
+
 .card-img-top {
   width: 100%;
   height: 12vw;
@@ -91,6 +109,8 @@ footer a:hover {
 
 .btn-dark:hover {
   color: goldenrod;
+  transform: scale(1.05);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
 }
 
 .skills-bar {
